--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -20,8 +20,14 @@ color: white;
 }
 
 
-input, select, textarea {
+input, textarea {
 background-color: #dbd9d9;
+}
+
+
+select {
+background-color: #dbd9d9 !important;
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='black' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") !important;
 }
 
 
@@ -63,13 +69,19 @@ color: #bcbaba;
 
 /* Dark theme drop-downs (in table data only) need dark background too */
 td select {
-background: #3a3a3a;
+background-color: #3a3a3a !important;
+width: 100% !important;
 }
 
 
 /* //////////////////////////////
 CLASSES
 ////////////////////////////// */
+
+
+td .custom-select {
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%2328b2ed' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") !important;
+}
 
 
 .result {
