--- a/templates/interface/css/light.style.css
+++ b/templates/interface/css/light.style.css
@@ -20,8 +20,14 @@ color: #000;
 }
 
 
-input, select, textarea {
+input, textarea {
 background-color: white;
+}
+
+
+select {
+background-color: white !important;
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='black' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") !important;
 }
 
 
@@ -63,13 +69,19 @@ color: #898888;
 
 /* Light theme drop-downs (in table data only) off white */
 td select {
-background: #f2f2f2;
+background-color: #f2f2f2 !important;
+width: 100% !important;
 }
 
 
 /* //////////////////////////////
 CLASSES
 ////////////////////////////// */
+
+
+td .custom-select {
+background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%231a1696' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") !important;
+}
 
 
 .result {
