--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -35,6 +35,7 @@ td {
 margin: 0px;
 padding: 6px;
 white-space: nowrap;
+vertical-align: middle !important;
 }
 
 th {
@@ -57,8 +58,9 @@ border: 1px solid #808080;
 
 select {
 line-height: 15px !important;
-height: 30px !important;
+height: 25px !important;
 width: auto !important;
+padding: .07rem 1.4rem .07rem .5rem !important;
 }
 
 
@@ -471,8 +473,7 @@ white-space: nowrap;
 .gain, td.data span.gain, td.data div.gain span, .btc_worth, .btc_worth span, td.data div.btc_worth span {
 margin: 0px;
 padding: 0px;
-color: #065640; /* slightly darker green than normal */
-font-size: 12px;
+font-size: 12px !important;
 border: 0px;
 background: none;
 white-space: nowrap;
