--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -395,6 +395,22 @@ border: 2px dotted #dd7c0d !important;
 }
 
 
+.ethereum {
+color: #939cbc !important;
+}
+
+
+.monero {
+color: #ED6305 !important;
+}
+
+.tooltip_title {
+position: relative; 
+white-space: nowrap; 
+text-align:center;
+}
+
+
 .portfolio_summary {
 margin-top: 2px;
 margin-bottom: 2px;
