Asset Performance comparision chart, to catch the best trends ove a user-defined time period for all assets
Asset Performance comparision chart, to catch the best trends ove a user-defined time period for all assets

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -711,7 +711,7 @@ padding: 6px;
 }
 
 
-#alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_system_charts, #show_visitor_stats, #show_logs, #coins_table {
+#alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_charts, #show_visitor_stats, #show_logs, #coins_table {
 display: none;
 }
 
