Code cleanup / CSS fixes
Code cleanup / CSS fixes

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -284,7 +284,7 @@ white-space: nowrap;
 
 .balloon_notation {
 white-space: normal; 
-font-size: 13px; 
+font-size: 13px !important; 
 margin-top: 15px;
 }
 
