FINAL? v4.23.4 fixes / UX improvements before release
FINAL? v4.23.4 fixes / UX improvements before release

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -58,7 +58,7 @@ input[type=text]:disabled {
 }
 
 
-a, .black, td.data span, .subsection_legend, .btc_worth, .btc_worth span, td.data div.btc_worth span {
+a, .black, td.data span, .subsection_legend, .crypto_worth, .crypto_worth span, td.data div.crypto_worth span {
 color: white;
 }
 
