Fine-tuned random color generation for multi-item charts, code cleanup, version bump
Fine-tuned random color generation for multi-item charts, code cleanup, version bump

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -166,6 +166,11 @@ CLASSES
 ////////////////////////////// */
 
 
+.chart_reload_message {
+display: inline;
+}
+
+
 .disclaimer {
 margin-top: 25px;
 margin-bottom: 25px;
