System stats alerts in interface, Modularization of mining calculators, New target price cron job plugin, Code cleanup
-System stats alerts in interface, if any system resource parameters are redlined (memory / disk / cpu usage, uptime, etc)

-New target price cron job plugin, to setup target price alerts for any markets (see plugin config file for adding markets)

-Modularization of mining calculators, and a new power user setting 'mining_calculators', to semi-automatically add new ones

-Code cleanup

--- a/templates/interface/css/dark.style.css
+++ b/templates/interface/css/dark.style.css
@@ -155,22 +155,6 @@ background: #343f49;
 }
 
 
-.red, #app_error_alert {
-color: #ff4747 !important;
-}
-
-
-#charts_error, #system_charts_error {
-border: 4px dotted #ff4747;
-}
-
-
-.red_dotted {
-padding: 10px;
-border: 2px dotted #ff4747 !important;
-}
-
-
 .green {
 color: #10d602 !important;
 }
@@ -242,6 +226,27 @@ border: 2px solid #d4d8d3;
 
 .countdown_notice {
 background: #202020;
+}
+
+/* RED LAST, TO ALWAYS OVERIDE */
+
+.red_background {
+background-color: #ff4747 !important;
+}
+
+.red_dotted {
+padding: 10px;
+border: 2px dotted #ff4747 !important;
+}
+
+
+.red, #app_error_alert {
+color: #ff4747 !important;
+}
+
+
+#charts_error, #system_charts_error {
+border: 4px dotted #ff4747;
 }
 
 
