--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -710,11 +710,6 @@ padding: 6px;
 }
 
 
-#alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_stats, #show_access_stats, #show_logs, #coins_table {
-display: none;
-}
-
-
 #topnav {
 display: inline-block;
 margin: auto;
@@ -778,5 +773,11 @@ table-layout:fixed;
 #coins_table thead, #coins_table tbody {
 min-width: 1200px;
 }
+
+
+#alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #system_stats_quick_link_info, #system_stats_admin_link_info {
+display: none;
+}
+
 
 
