New 'address-balance-tracker' plugin, Better plugin development UX, Code cleanup
New 'address-balance-tracker' plugin, Better plugin development UX, Code cleanup

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -590,6 +590,12 @@ display: none;
 }
 
 
+.donate_crypto {
+text-decoration: underline;
+cursor: pointer;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
