--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -590,8 +590,13 @@ display: none;
 }
 
 
-.donate_crypto {
+.underline_pointer {
 text-decoration: underline;
+cursor: pointer;
+}
+
+
+.pointer {
 cursor: pointer;
 }
 
