UX, Bug fix for login authentication WITH MULTIPLE INSTALLS ON THE #SAME# MACHINE / SERVER (logged into both instances, with only one login)
UX, Bug fix for login authentication WITH MULTIPLE INSTALLS ON THE #SAME# MACHINE / SERVER (logged into both instances, with only one login)

--- a/templates/interface/css/style.css
+++ b/templates/interface/css/style.css
@@ -608,6 +608,11 @@ cursor: pointer;
 }
 
 
+.sys_stats {
+margin-top: 5px;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
