Privacy mode feature
Privacy mode feature

--- a/templates/interface/desktop/css/dark.style.css
+++ b/templates/interface/desktop/css/dark.style.css
@@ -78,6 +78,17 @@ CLASSES
 ////////////////////////////// */
 
 
+.disable_click{
+background: #ce7039 !important;
+}
+
+
+.pw_prompt {
+    border: 2px solid white;
+    background: #808080 !important;
+}
+
+
 .custom-select:disabled { 
   background-color: #6f6e6e !important;
   color: black !important;
