--- a/templates/interface/desktop/css/style.css
+++ b/templates/interface/desktop/css/style.css
@@ -195,6 +195,11 @@ pointer-events: none !important;
 }
 
 
+.alert-warning a {
+color: black !important; /* Force black a href in bootstrap warning modal (our upgrade alerts, etc) */
+}
+
+
 .chart_reload_msg {
 display: inline;
 }
