BUG FIX: reduced storage size for user-selected news feeds (helps avoid app crashes from excessively-sized page headers), Added system alerts (comms messages / error logging) and threshold trigger config, for when TOTAL cookies data size risks server crashing
BUG FIX: reduced storage size for user-selected news feeds (helps avoid app crashes from excessively-sized page headers), Added system alerts (comms messages / error logging) and threshold trigger config, for when TOTAL cookies data size risks server crashing

--- a/templates/interface/desktop/css/dark.style.css
+++ b/templates/interface/desktop/css/dark.style.css
@@ -271,6 +271,11 @@ border: 4px dotted #ff4747;
 }
 
 
+#header_size_warning {
+color: #ff4747;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
