--- a/templates/interface/desktop/css/light.style.css
+++ b/templates/interface/desktop/css/light.style.css
@@ -279,6 +279,11 @@ border: 4px dotted #D61F00;
 }
 
 
+#header_size_warning {
+color: #D61F00;
+}
+
+
 /* //////////////////////////////
 IDs
 ////////////////////////////// */
