--- a/templates/interface/desktop/css/style.css
+++ b/templates/interface/desktop/css/style.css
@@ -839,7 +839,7 @@ border: 2px solid #dd7c0d !important;
 }
 
 
-#prim_currency_markets_alert, #percent_change_alert_type_alert {
+#prim_currency_mrkts_alert, #percent_change_alert_type_alert {
 display: none;
 font-weight: bold;
 margin: 20px;
@@ -866,7 +866,7 @@ position: absolute;
 }
 
 
-#alert_source, #percent_change_amount, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, #sys_stats_admin_link_info, #header_size_warning {
+#alert_source, #percent_change_amnt, #percent_change_filter, #percent_change_time, #percent_change_alert_type, #show_chart_settings, #show_feed_settings, #show_portfolio_stats, #show_system_stats, #show_access_stats, #show_logs, #coins_table, #sys_stats_quick_link_info, #sys_stats_admin_link_info, #header_size_warning {
 display: none;
 }
 
