Moved trading notes to local storage (to avoid cookie sizes over-affecting server header size)
Moved trading notes to local storage (to avoid cookie sizes over-affecting server header size)

--- a/templates/interface/desktop/css/dark.style.css
+++ b/templates/interface/desktop/css/dark.style.css
@@ -31,7 +31,7 @@ background-color: #dbd9d9 !important;
 }
 
 
-input[type=submit], input[type=button], .force_button_style {
+button, input[type=submit], input[type=button], .force_button_style {
   border: 1px solid #999999;
   background-color: #42484e;
 }
