Finished page zoom logic buildout
Finished page zoom logic buildout

--- a/templates/interface/desktop/css/dark.style.css
+++ b/templates/interface/desktop/css/dark.style.css
@@ -304,3 +304,13 @@ color: white !important;
 border-radius: 3px;
 }
 
+
+#minusBtn {
+border: 1px solid #ff4747;
+}
+
+
+#plusBtn {
+border: 1px solid #10d602;
+}
+
