--- a/templates/interface/desktop/css/dark.admin.css
+++ b/templates/interface/desktop/css/dark.admin.css
@@ -15,7 +15,7 @@ CLASSES
 ////////////////////////////// */
 
 
-.tab-content>.active {
+.tab-content>.active, .plugin-content {
 background-color: #202020;
 color: #fff;
 }
