sanitization of input data, UX and optimization logic additions, admin login alerts feature, bug fix for interface upgrade alerts, final polish on new debt tracker plugin
sanitization of input data, UX and optimization logic additions, admin login alerts feature, bug fix for interface upgrade alerts, final polish on new debt tracker plugin

--- a/plugins/debt-tracker/plug-assets/style.css
+++ b/plugins/debt-tracker/plug-assets/style.css
@@ -1,8 +1,8 @@
 
 
 .debt_results {
-color: #808080;
-border: 1px solid #808080;
+color: #dd7c0d;
+border: 1px solid #dd7c0d;
 border-radius: 8px;
 padding: 8px;
 margin: 16px;
@@ -11,5 +11,5 @@ margin: 16px;
 .debt_results_total {
 font-weight: bold;
 margin: 25px;
-color: #808080;
+color: #dd7c0d;
 }
