--- a/templates/interface/desktop/css/admin.css
+++ b/templates/interface/desktop/css/admin.css
@@ -15,6 +15,12 @@ CLASSES
 ////////////////////////////// */
 
 
+.admin_iframe {
+overflow: hidden;
+width: 100%; 
+position: relative;
+}
+
 
 .plugin-content {
     border: 2px solid #808080;
