code review fixes / optimizations
code review fixes / optimizations

--- a/templates/interface/desktop/css/admin.css
+++ b/templates/interface/desktop/css/admin.css
@@ -22,19 +22,13 @@ position: relative;
 }
 
 
-.plugin-content {
-    display: block;
-    min-height: 1100px;
-}
-
-
 .tab-content {
     float: left;
     width: 85%;
 }
 
 
-.tab-content > div, .plugin-content {
+.tab-content > div {
 padding: 20px !important;
 }
 
