--- a/templates/interface/desktop/css/light.admin.css
+++ b/templates/interface/desktop/css/light.admin.css
@@ -15,7 +15,7 @@ CLASSES
 ////////////////////////////// */
 
 
-.tab-content>.active, .plugin-content, .iframe_wrapper {
+.tab-content>.active, .iframe_wrapper {
 background-color: #fff;
 color: #000;
 }
