--- a/templates/interface/desktop/css/light.style.css
+++ b/templates/interface/desktop/css/light.style.css
@@ -178,7 +178,7 @@ color: #066000 !important;
 
 .green_dotted {
 padding: 10px;
-border: 2px dotted #066000 !important;
+border: 3px dotted #066000 !important;
 }
 
 
@@ -199,7 +199,7 @@ color: white;
 
 
 .start_page_menu {
-border: 2px dotted black; 
+border: 3px dotted black; 
 }
 
 
@@ -265,12 +265,22 @@ background-color: #D61F00 !important;
 
 .red_dotted {
 padding: 10px;
-border: 2px dotted #D61F00 !important;
+border: 3px dotted #D61F00 !important;
 }
 
 
 .red, #app_error_alert {
 color: #D61F00 !important;
+}
+
+
+/* //////////////////////////////
+IDs
+////////////////////////////// */
+
+
+#watch_only {
+border: 3px dotted black;
 }
 
 
@@ -282,11 +292,6 @@ border: 4px dotted #D61F00;
 #header_size_warning {
 color: #D61F00;
 }
-
-
-/* //////////////////////////////
-IDs
-////////////////////////////// */
 
 
 #admin_nav .dropdown-menu {
